--- a/styles.css
+++ b/styles.css
@@ -1,252 +1,271 @@
-/*--website styles--*/
 * {
     font-size: 16px;
-    letter-spacing: 2px;
+    font-family: sans-serif;
+}
+
+p {
+  font-family: 'Caveat';
+  font-size: 1.5rem;
+  margin: 1rem;
+  text-align: justify;
+}
+
+/*--Header styles--*/
+header {
+    display: inline-flex;
+    position: fixed;
+    height: 100px;
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid black;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    justify-content:space-between;
+    align-items: center;
+    background-color: lightskyblue;
     cursor: default;
 }
 
-body {
-    font-family: 'Gloock', 'Xanh Mono', serif;
-    position: relative;
-    top: 100px;
+.logo-container {
+    display: inline-flex;
+    align-items: center;
 }
 
-.divider {
-    display: block;
-    align-items: center;
-    border: 1px solid black;
-    margin: 50px;
+nav {
+    width: auto;
+    margin-right: 1rem;
 }
-/*--Header--*/
 
-.banner {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    align-items: center;
-    position: fixed;
-    z-index: 100;
-    top: 0;
-    border-bottom: 1px solid black;
-    margin: 0;
+ul {
     padding: 0;
-    left: 0;
-    background-color: white;
 }
 
-h1 {
-    font-family: 'Gloock', serif;
-    font-size: 32px;
-    display: block;
-    padding-left: 30px;
-    justify-content: center;
-    align-items: center;
-}
-
-h2 {
-    font-size: 28px;
+a {
+    text-decoration: none;
+    color: #5E6970;
+    background-color: #CBE3F2;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 1rem;
+    padding: 0.5rem;
+    font-family: 'Kalam', sans-serif;
+    width: 5rem;
+    font-size: 1.25rem;
 }
 
 li {
     list-style: none;
-    display: inline-block;
-    padding: 0px 30px;
-    align-items: center;
-    justify-content: center;
-    font-size: 32px;
-    color: green;
-    text-decoration: none;
-}
-
-a:visited {
-    color: green;
-}
-
-a:hover {
-    color: green;
+    display: inline-flex;
     cursor: pointer;
-    text-decoration: none;
-}
-
-a:active {
-    color: teal;
-}
-
-/*--mission statement--*/
-
-.mission-statement {
-    background-image: url(https://static.vecteezy.com/system/resources/previews/004/733/679/original/abstract-army-camouflage-seamless-pattern-free-vector.jpg);
-    display: block;
     text-align: center;
-    color: white;
-    padding: 100px 0;
-    width: 100%;
-}
-
-.mission-statement h2 {
-    font-size: 28px;
-    text-decoration: underline;
-}
-
-.mission-statement p {
-    font-family: 'Xanh Mono';
-    font-size: 20px;
-    font-weight: bold;
-}
-
-/*--gallery--*/
-
-.gallery {
-    text-align: center;
-    width: 100%;
-    position: relative;
-}
-
-.gallery-title {
-    display: block;
-    position:static;
-    justify-content: center;
-    margin: 50px;
-}
-
-.grid {
-    display: grid;
-    position: relative;
-    width: 100%;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 30px 10px;
-    grid-auto-rows: auto;
-    grid-auto-columns: auto;
-    margin: 0;
     padding: 0;
 }
 
-.a {
-    grid-area: 2 / 1 / span 1 /  span 1;
+.logo {
+    height: 50px;
+    padding: 10px;
+    background-color: aliceblue;
+    border-radius: 1rem;
+    margin-left: 1rem;
 }
 
-.b {
-    grid-area: 2 / 2 / span 1 / span 1;
+h1 {
+    font-family: 'Caveat', sans-serif;
+    font-size: 3rem;
+    padding: 1rem;
+    text-decoration: underline  #5F91B0;
 }
 
-.c {
-    grid-area: 2 / 3 / span 1 / span 1;
+@media only screen and (max-width: 800px) {
+  a{
+    font-size: 1rem;
+    padding: 0.25rem;
+  }
+
+  h1 {
+    font-size: 2rem;
+  }
+
+}
+
+/*--Body and main styles--*/
+
+body {
+  margin: 0;
+  position: relative;
+}
+
+main {
+    position: relative;
+    top: 100px;
+    bottom: 100px;
+    left: 0;
+    cursor: default;
+}
+
+h2 {
+    font-size: 3rem;
+    font-family: 'Caveat', sans-serif;
+    text-align: center;
+    text-decoration: underline double;
 }
 
 .gallery-container {
-    display: flex;
-    justify-content: space-around;
-    background-color: lightgrey;
-    padding: 50px 0;
-    margin: 0;
-    flex-flow: row wrap;
-    min-width: 600px;
+  display: flex;
+  justify-content: space-around;
+  margin: 3rem auto;
+  
 }
 
-.image-container {
-    width: 25%;
+.gallery img {
+  width: 30%;
+  overflow: hidden;
+  align-items: center;
 }
 
-img {
-    width: 100%;
-    border-radius: 5px;
-    overflow: hidden;
+h3 {
+  font-size: 2.5rem;
+  font-family: 'Permanent Marker';
 }
 
-.top-side, 
-.top-middle,
-.bottom-side {
-    flex-flow: column wrap;
+.quote-section {
+  background-color: cornflowerblue;
+  max-width: 100%;
+  left: 0;
+  padding: 1rem 1.5rem;
+  text-align: justify;
 }
 
-/*--company employees--*/
+@media only screen and (max-width:800px) {
+  h3{
+    font-size: 1.5rem;
+  }
 
-.company-employees {
-    display: block;
+  h2 {
+    font-size: 2rem;
+  }
+
+  p {
+    font-size: 1.25rem;
+  }
 }
-
-.company-employees h2 {
-    text-align: center;
-}
-
-.employee-container {
-    display: flex;
-    width: 100%;
-    text-align: center;
-    background-color: lightgray;
-    justify-content: space-around;
-}
-
-.employee-box {
-    width: 20%;
-    padding: 20px;
-}
-
-/*--contact-info--*/
 
 .contact-info {
-    font-family: 'Gloock', serif;
-    display: block;
-    text-align: center;
-    background-color: lightgrey;
-    padding: 20px;
-    line-height: 20px;
-    font-weight: 400;
+  display: block;
+  justify-content: center;
+  position: relative;
 }
 
-/*--fonts--*/
+.join h2 {
+  text-decoration: none;
+}
+
+.join p{
+  text-align: center;
+}
+
+.join-gallery {
+  display: flex;
+  justify-content: space-around;
+  margin: 3rem auto;
+  
+}
+
+.join-gallery img {
+  width: 30%;
+  overflow: hidden;
+  align-items: center;
+}
+
+.contact-info h2 {
+  text-decoration: none;
+}
+.contact-info p {
+  text-align: center;
+}
+
+/*--Footer styles--*/
+
+footer {
+  padding: 2rem;
+  background-color: darkblue;
+  position: relative;
+  top: 100px;
+  color: white;
+}
+
+/*--Font family--*/
+
 /* cyrillic-ext */
 @font-face {
-    font-family: 'Gloock';
+    font-family: 'Caveat';
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(https://fonts.gstatic.com/s/gloock/v1/Iurb6YFw84WUY4NJhRakNrc.woff2) format('woff2');
+    src: url(https://fonts.gstatic.com/s/caveat/v17/WnznHAc5bAfYB2QRah7pcpNvOx-pjfJ9eIipYSxP.woff2) format('woff2');
     unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
   }
-  /* latin-ext */
+  /* cyrillic */
   @font-face {
-    font-family: 'Gloock';
+    font-family: 'Caveat';
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(https://fonts.gstatic.com/s/gloock/v1/Iurb6YFw84WUY4NJhhakNrc.woff2) format('woff2');
+    src: url(https://fonts.gstatic.com/s/caveat/v17/WnznHAc5bAfYB2QRah7pcpNvOx-pjfJ9eIGpYSxP.woff2) format('woff2');
+    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+  }
+  /* latin-ext */
+  @font-face {
+    font-family: 'Caveat';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/caveat/v17/WnznHAc5bAfYB2QRah7pcpNvOx-pjfJ9eIupYSxP.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
   /* latin */
   @font-face {
-    font-family: 'Gloock';
+    font-family: 'Caveat';
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(https://fonts.gstatic.com/s/gloock/v1/Iurb6YFw84WUY4NJiBak.woff2) format('woff2');
+    src: url(https://fonts.gstatic.com/s/caveat/v17/WnznHAc5bAfYB2QRah7pcpNvOx-pjfJ9eIWpYQ.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
-  /* vietnamese */
+  /* devanagari */
   @font-face {
-    font-family: 'Xanh Mono';
+    font-family: 'Kalam';
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(https://fonts.gstatic.com/s/xanhmono/v17/R70YjykVmvKCep-vWhSokAqRbzI.woff2) format('woff2');
-    unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+    src: url(https://fonts.gstatic.com/s/kalam/v16/YA9dr0Wd4kDdMthQOCfzsw.woff2) format('woff2');
+    unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
   }
   /* latin-ext */
   @font-face {
-    font-family: 'Xanh Mono';
+    font-family: 'Kalam';
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(https://fonts.gstatic.com/s/xanhmono/v17/R70YjykVmvKCep-vWhSokQqRbzI.woff2) format('woff2');
+    src: url(https://fonts.gstatic.com/s/kalam/v16/YA9dr0Wd4kDdMthfOCfzsw.woff2) format('woff2');
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
   }
   /* latin */
   @font-face {
-    font-family: 'Xanh Mono';
+    font-family: 'Kalam';
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(https://fonts.gstatic.com/s/xanhmono/v17/R70YjykVmvKCep-vWhSonwqR.woff2) format('woff2');
+    src: url(https://fonts.gstatic.com/s/kalam/v16/YA9dr0Wd4kDdMthROCc.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  }
+  /* latin */
+  @font-face {
+    font-family: 'Permanent Marker';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/permanentmarker/v16/Fh4uPib9Iyv2ucM6pGQMWimMp004La2Cfw.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
